finish-user-function-old-create

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -7,5 +7,5 @@ $color: #566885;
 //-----------------------------------------------------------------
 .app {
     background: $background;
-
+    height: 100vh;
 }
