--- a/reset.scss
+++ b/reset.scss
@@ -32,7 +32,7 @@ aside {
 
 html,
 body {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	line-height: 1;
 	-moz-text-size-adjust: 100%;
@@ -40,7 +40,10 @@ body {
 	-webkit-text-size-adjust: 100%;
 }
 
-
+#root {
+	width: 100%;
+	height: 100%;
+}
 input,
 button,
 textarea {
