--- a/src/components/pages/styles/disk.module.scss
+++ b/src/components/pages/styles/disk.module.scss
@@ -100,3 +100,10 @@ $color: #566885;
     @include adaptive-font(40, 25, 1920);
     @extend %displayCenter;
 }
+.visible {}
+
+.plate {}
+
+.nine {}
+
+.list {}
